--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Samuel Reveles",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
