--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "mongoose": "^6.1.8",
     "session": "^0.1.0",
