--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "session": "^0.1.0",
+    "socket.io": "^4.4.1",
     "twilio": "^3.74.0"
   },
   "devDependencies": {}
