--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "google-auth-library": "^7.14.1",
+    "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "session": "^0.1.0",
