Creación de PDF's  de dieta y ticket

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "pdfkit": "^0.13.0",
+    "pdfkit-construct": "^1.2.3",
     "session": "^0.1.0",
     "socket.io": "^4.4.1",
     "twilio": "^3.74.0"
